--- a/info_project/info_app/templates/info_app/base.html
+++ b/info_project/info_app/templates/info_app/base.html
@@ -33,9 +33,9 @@
 
                 </ul>
                 {% if user.is_authenticated %}
-                <a class="nav-item nav-link" href="{% url 'post-create' %}">New Post</a>
+                <a class="nav-item nav-link" href="#">New Post</a>
                 <a class="nav-item nav-link" href="{% url 'profile' %}">Profile</a>
-                <a class="nav-item nav-link" href="{% url 'logout' %}">Logout</a>
+                <a class="nav-item nav-link" href="{% url 'account_logout' %}">Logout</a>
                 {% else %}
                 <a class="nav-item nav-link" href="{% url 'account_login' %}">Login</a>
                 <a class="nav-item nav-link" href="{% url 'account_signup' %}">Register</a>
