--- a/info_project/info_app/templates/info_app/base.html
+++ b/info_project/info_app/templates/info_app/base.html
@@ -1,3 +1,6 @@
+{% load static %}
+{% load account %}
+
 <!DOCTYPE html>
 <html lang="en">
 
@@ -8,7 +11,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.2/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-uWxY/CJNBR+1zjPWmfnSnVxwRheevXITnMqoEIeG1LJrdI0GlVs/9cVSyPYXdcSF" crossorigin="anonymous">
-        <link rel=”stylesheet” href=”https://stackpath.bootstrapcdn.com/bootstrap/4.1.2/css/bootstrap.min.css”>
+    <link rel=”stylesheet” href=”https://stackpath.bootstrapcdn.com/bootstrap/4.1.2/css/bootstrap.min.css”>
     {% if title %}
     <title>Django Blog - {{ title }}</title>
     {% else %}
@@ -20,6 +23,7 @@
     <nav class="navbar navbar-expand-lg navbar-light bg-light">
         <div class="container-fluid">
             <a class="navbar-brand" href="{% url 'home' %}">Home</a>
+            
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
                 data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false"
                 aria-label="Toggle navigation">
@@ -30,16 +34,26 @@
                     <li class="nav-item">
                         <a class="nav-link active" aria-current="page" href="{% url 'federalregister' %}">something</a>
                     </li>
-
                 </ul>
-                {% if user.is_authenticated %}
-                <a class="nav-item nav-link" href="#">New Post</a>
-                <a class="nav-item nav-link" href="{% url 'profile' %}">Profile</a>
-                <a class="nav-item nav-link" href="{% url 'account_logout' %}">Logout</a>
-                {% else %}
-                <a class="nav-item nav-link" href="{% url 'account_login' %}">Login</a>
-                <a class="nav-item nav-link" href="{% url 'account_signup' %}">Register</a>
-                {% endif %}
+                    {% if user.is_authenticated %}
+                    <div class="navbar-nav">
+                        <li class="nav-item dropdown">
+                            <button  class="nav-link dropdown-toggle btn btn-outline-light" type="button" id="dropdownMenuButton1" data-bs-toggle="dropdown" aria-expanded="false">
+                                <img class="rounded-circle account-img" height="50" src="{{ user.profile.image.url }}"> Welcome, {% user_display user %} 
+                               </button>
+                               <ul class="dropdown-menu" aria-labelledby="dropdownMenuButton1">
+                                 <li><a class="dropdown-item" href="{% url 'profile' %}">Profile</a></li>
+                                 <li><a class="dropdown-item" href="{% url 'account_logout' %}">Logout</a></li>
+                                 <li><a class="dropdown-item" href="#">Something else here</a></li>
+                               </ul>
+                        </li>
+                    </div>
+                    {% else %}
+                    <li class="nav-item nav-link" href="{% url 'account_login' %}">Login</li>
+                    <li class="nav-item nav-link" href="{% url 'account_signup' %}">Register</li>
+                    {% endif %}
+
+               
                 <form class="d-flex">
                     <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
                     <button class="btn btn-outline-success" type="submit">Search</button>
@@ -48,11 +62,11 @@
         </div>
     </nav>
 
-  
-{% block content %}{% endblock %}
-    
 
-    
+    {% block content %}{% endblock %}
+
+
+    <script src="{% static 'federalregister.js' %}"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.2/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-kQtW33rZJAHjgefvhyyzcGF3C5TFyBQBA13V1RKPf4uH+bwyzQxZ6CmMZHmNBEfJ"
         crossorigin="anonymous"></script>
