--- a/info_project/info_app/templates/info_app/federalregister.html
+++ b/info_project/info_app/templates/info_app/federalregister.html
@@ -1,38 +1,42 @@
 {% extends "info_app/base.html" %}
 
+
 {% block content %}
-    {% for snip in snips %}
-       
-    <ul class="list-group">
-        <li class="list-group-item">Title: {{ snip.title }}</li>
-        <li class="list-group-item">Date: {{ snip.pubDate }}</li>
-        <li class="list-group-item"><a href="{{ snip.link }}">Link: </a></li>
-        
-        <li class="list-group-item">Description: {{ snip.description }}</li>
-      </ul>
-      <br>
-       
-    {% endfor %}
+<button id='userSubscribe'>Subscribe</button>
 
-    {% if is_paginated %}
+{% for snip in page_obj %}
+<div class="list-group">
+  <a href="{{ snip.link }}" class="list-group-item list-group-item-action" aria-current="true">
+    <div class="d-flex w-100 justify-content-between">
+      <h5 class="mb-1">{{ snip.title }}</h5>
+      
+    </div>
+    <p class="mb-1">Published on {{ snip.pubDate }}</p>
+    <small>{{ snip.description }}</small>
+  </a>
+</div>
+<br>
+{% endfor %}
 
-    {% if page_obj.has_previous %}
-      <a class="btn btn-outline-info mb-4" href="?page=1">First</a>
-      <a class="btn btn-outline-info mb-4" href="?page={{ page_obj.previous_page_number }}">Previous</a>
+<div class='d-flex justify-content-center'>
+  {% if page_obj.has_previous %}
+  <a class="btn btn-outline-info mb-4" href="?page=1">First</a>
+  <a class="btn btn-outline-info mb-4" href="?page={{ page_obj.previous_page_number }}">Previous</a>
+  {% endif %}
+
+  {% for num in page_obj.paginator.page_range %}
+  {% if page_obj.number == num %}
+  <a class="btn btn-info mb-4" href="?page={{ num }}">{{ num }}</a>
+  {% elif num > page_obj.number|add:'-3' and num < page_obj.number|add:'3' %} <a class="btn btn-outline-info mb-4"
+    href="?page={{ num }}">{{ num }}</a>
     {% endif %}
-
-    {% for num in page_obj.paginator.page_range %}
-      {% if page_obj.number == num %}
-        <a class="btn btn-info mb-4" href="?page={{ num }}">{{ num }}</a>
-      {% elif num > page_obj.number|add:'-3' and num < page_obj.number|add:'3' %}
-        <a class="btn btn-outline-info mb-4" href="?page={{ num }}">{{ num }}</a>
-      {% endif %}
     {% endfor %}
 
     {% if page_obj.has_next %}
-      <a class="btn btn-outline-info mb-4" href="?page={{ page_obj.next_page_number }}">Next</a>
-      <a class="btn btn-outline-info mb-4" href="?page={{ page_obj.paginator.num_pages }}">Last</a>
+    <a class="btn btn-outline-info mb-4" href="?page={{ page_obj.next_page_number }}">Next</a>
+    <a class="btn btn-outline-info mb-4" href="?page={{ page_obj.paginator.num_pages }}">Last</a>
     {% endif %}
+</div>
 
-  {% endif %}
+
 {% endblock %}
