--- a/info_project/info_app/templates/info_app/base.html
+++ b/info_project/info_app/templates/info_app/base.html
@@ -18,8 +18,8 @@
     <title>Django Blog</title>
     {% endif %}
 </head>
-
 <body>
+    
     <nav class="navbar navbar-expand-lg navbar-light bg-light">
         <div class="container-fluid">
             <a class="navbar-brand" href="{% url 'home' %}">Home</a>
@@ -61,11 +61,11 @@
             </div>
         </div>
     </nav>
-
+    
 
     {% block content %}{% endblock %}
-
-
+    {{ request.user.id|json_script:"user_id" }}
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/axios/0.21.1/axios.min.js"></script>
     <script src="{% static 'federalregister.js' %}"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.2/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-kQtW33rZJAHjgefvhyyzcGF3C5TFyBQBA13V1RKPf4uH+bwyzQxZ6CmMZHmNBEfJ"
