axios patch from JS to REST API working

--- a/info_project/info_app/templates/info_app/federalregister.html
+++ b/info_project/info_app/templates/info_app/federalregister.html
@@ -1,7 +1,7 @@
 {% extends "info_app/base.html" %}
 {% block content %}
-
 <button id='userSubscribe'>Subscribe</button>
+{% csrf_token %}
 
 {% for snip in page_obj %}
 <div class="list-group">
