--- a/info_project/info_app/templates/info_app/base.html
+++ b/info_project/info_app/templates/info_app/base.html
@@ -49,8 +49,8 @@
                         </li>
                     </div>
                     {% else %}
-                    <li class="nav-item nav-link" href="{% url 'account_login' %}">Login</li>
-                    <li class="nav-item nav-link" href="{% url 'account_signup' %}">Register</li>
+                    <a class="nav-item nav-link" href="{% url 'account_login' %}">Login</a>
+                    <a class="nav-item nav-link" href="{% url 'account_signup' %}">Register</a>
                     {% endif %}
 
                
@@ -65,6 +65,7 @@
 
     {% block content %}{% endblock %}
     {{ request.user.id|json_script:"user_id" }}
+    
     <script src="https://cdnjs.cloudflare.com/ajax/libs/axios/0.21.1/axios.min.js"></script>
     <script src="{% static 'federalregister.js' %}"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.2/dist/js/bootstrap.bundle.min.js"
