--- a/info_project/info_app/templates/info_app/federalregister.html
+++ b/info_project/info_app/templates/info_app/federalregister.html
@@ -12,6 +12,8 @@
     <p class="mb-1">Published on {{ snip.pubDate }}</p>
     <small>{{ snip.description }}</small>
   </a>
+  <button id='{{ snip.id }}' >Add Snippet</button>
+  
 </div>
 <br>
 {% endfor %}
