--- a/info_project/info_app/templates/info_app/federalregister.html
+++ b/info_project/info_app/templates/info_app/federalregister.html
@@ -1,20 +1,44 @@
 {% extends "info_app/base.html" %}
 {% block content %}
-<button id='userSubscribe'>Subscribe</button>
+<div class="container-fluid">
+  <button class='userSubscribe' >Subscribe</button>
+</div>
 {% csrf_token %}
 
 {% for snip in page_obj %}
-<div class="list-group">
-  <a href="{{ snip.link }}" class="list-group-item list-group-item-action" aria-current="true">
-    <div class="d-flex w-100 justify-content-between">
-      <h5 class="mb-1">{{ snip.title }}</h5>    
+
+<div class="list-group mx-2">
+  <div class="row align-items-start">
+    <a href="{{ snip.link }}" class="list-group-item list-group-item-action" aria-current="true">
+      <div class="d-flex w-100 justify-content-between">
+        <h5 class="mb-1">{{ snip.title }}</h5>
+      </div>
+      <p class="mb-1">Published on: <bold>{{ snip.pubDate }}</bold></p>
+      <small>Description: <bold>{{ snip.description }}</bold></small>
+    </a>
+    {% if user.is_authenticated %}
+
+    <div class="row align-top">
+      <div class="col-4">
+        <button class='buttons' name="{{ snip.id }}">Add Snippet</button>
+
+      </div>
     </div>
-    <p class="mb-1">Published on {{ snip.pubDate }}</p>
-    <small>{{ snip.description }}</small>
-  </a>
-  <button class='buttons' name="{{ snip.id }}">Add Snippet</button>
-  
+
+    {% else %}
+
+    <div class="row align-top">
+      <div class="col-4">
+        <button class='buttons' name="{{ snip.id }}" data-bs-toggle="tooltip" data-bs-placement="top"
+          title="Sign in to add to your account!" disabled>Add Snippet</button>
+      </div>
+    </div>
+
+    {% endif %}
+
+  </div>
 </div>
+
 <br>
 {% endfor %}
 
