--- a/info_project/info_app/templates/base.html
+++ b/info_project/info_app/templates/base.html
@@ -66,9 +66,12 @@
     {% block content %}{% endblock %}
     <!-- allows for the user ID to be parsed by JS -->
     {{ request.user.id|json_script:"user_id" }}
+
+    
     
     <script src="https://cdnjs.cloudflare.com/ajax/libs/axios/0.21.1/axios.min.js"></script>
     <script src="{% static 'federalregister.js' %}"></script>
+    <script src="{% static 'profile.js' %}"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.2/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-kQtW33rZJAHjgefvhyyzcGF3C5TFyBQBA13V1RKPf4uH+bwyzQxZ6CmMZHmNBEfJ"
         crossorigin="anonymous"></script>
