--- a/info_project/info_app/templates/info_app/federalregister.html
+++ b/info_project/info_app/templates/info_app/federalregister.html
@@ -1,7 +1,7 @@
 {% extends "base.html" %}
 {% block content %}
 <div class="container-fluid">
-  <button class='userSubscribe' >Subscribe</button>
+  <button class='userSubscribe' name="FRsec" >Subscribe</button>
 </div>
 {% csrf_token %}
 
