--- a/info_project/info_app/templates/base.html
+++ b/info_project/info_app/templates/base.html
@@ -54,9 +54,9 @@
                     {% endif %}
 
                
-                <form class="d-flex" action="{% url 'search_results' %}" method="get">
-                    <input class="form-control me-2" name="q" type="search" placeholder="Search" aria-label="Search">
-                    <button class="btn btn-outline-success" id='search' type="submit">Search</button>
+                <form class="d-flex"  action="{% url 'search_results' %}" method="get">
+                    <input class="form-control me-2" id=mySearch name="q" type="search" placeholder="Search" aria-label="Search">
+                    <button class="btn btn-outline-success" id='searchTxt' type="submit">Search</button>
                 </form>
             </div>
         </div>
@@ -70,6 +70,7 @@
     
     
     <script src="https://cdnjs.cloudflare.com/ajax/libs/axios/0.21.1/axios.min.js"></script>
+    <script src="{% static 'search.js' %}"></script>
     <script src="{% static 'federalregister.js' %}"></script>
     <script src="{% static 'profile.js' %}"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.2/dist/js/bootstrap.bundle.min.js"
