--- a/info_project/info_app/templates/info_app/federalregister.html
+++ b/info_project/info_app/templates/info_app/federalregister.html
@@ -1,8 +1,9 @@
 {% extends "base.html" %}
 {% block content %}
 <div class="container-fluid">
-  <button class='userSubscribe' name="FRsec" >Subscribe</button>
+  <button class='userSubscribe btn btn-info' name="FRsec" >Subscribe to this Feed</button>
 </div>
+<br>
 {% csrf_token %}
 
 {% for snip in page_obj %}
