--- a/info_project/info_app/templates/info_app/search_results.html
+++ b/info_project/info_app/templates/info_app/search_results.html
@@ -2,60 +2,10 @@
 
 {% block content %}
 {% csrf_token %}
-{% for snip in snips %}
 
-<div class="list-group mx-2">
-  <div class="row align-items-start">
-    <a href="{{ snip.link }}" class="list-group-item list-group-item-action" aria-current="true">
-      <div class="d-flex w-100 justify-content-between">
-        <h5 class="mb-1">{{ snip.title }}</h5>
-      </div>
-      <p class="mb-1">Published on: <bold>{{ snip.pubDate }}</bold></p>
-      <small>Description: <bold>{{ snip.description }}</bold></small>
-    </a>
-    {% if user.is_authenticated %}
+<br>    
+<div class='container-fluid mx-2' id='deleteSub'></div>
 
-    <div class="row align-top">
-      <div class="col-4">
-        <button class='snipButton btn btn-primary' name="{{ snip.id }}" >Add Snippet</button>
-       
-      </div>
-    </div>
 
-    {% else %}
 
-    <div class="row align-top">
-      <div class="col-4">
-        <button class='buttons' name="{{ snip.id }}" data-bs-toggle="tooltip" data-bs-placement="top"
-          title="Sign in to add to your account!" disabled>Add Snippet</button>
-      </div>
-    </div>
-
-    {% endif %}
-
-  </div>
-</div>
-
-<br>
-{% endfor %}
-
-<div class='d-flex justify-content-center'>
-  {% if page_obj.has_previous %}
-  <a class="btn btn-outline-info mb-4" href="?page=1">First</a>
-  <a class="btn btn-outline-info mb-4" href="?page={{ page_obj.previous_page_number }}">Previous</a>
-  {% endif %}
-
-  {% for num in page_obj.paginator.page_range %}
-  {% if page_obj.number == num %}
-  <a class="btn btn-info mb-4" href="?page={{ num }}">{{ num }}</a>
-  {% elif num > page_obj.number|add:'-3' and num < page_obj.number|add:'3' %} <a class="btn btn-outline-info mb-4"
-    href="?page={{ num }}">{{ num }}</a>
-    {% endif %}
-    {% endfor %}
-
-    {% if page_obj.has_next %}
-    <a class="btn btn-outline-info mb-4" href="?page={{ page_obj.next_page_number }}">Next</a>
-    <a class="btn btn-outline-info mb-4" href="?page={{ page_obj.paginator.num_pages }}">Last</a>
-    {% endif %}
-</div>
   {% endblock content %}
