--- a/info_project/users/templates/users/profile.html
+++ b/info_project/users/templates/users/profile.html
@@ -1,6 +1,7 @@
 {% extends "base.html" %}
 {% load crispy_forms_tags %}
 {% block content %}
+<body onload="popSnips()"></body>
 <div class="content-section w-100 p-3">
   <div class="media">
     <img class="rounded-circle account-img" src="{{ user.profile.image.url }}">
@@ -16,6 +17,7 @@
 
       {{ u_form|crispy }}
       {{ p_form|crispy }}
+
     </fieldset>
     <div class="form-group">
       <button class="btn btn-outline-info" type="submit">Update</button>
@@ -23,72 +25,18 @@
   </form>
 </div>
 
-<div onload='popSnips()'></div>
 
-<div class="container-fluid">
-  <div class="list-group mx-2">
+<div class="container-fluid ">
+  <h5>Saved Snippets</h5>
+  <div class="list-group mx-3">
     <div class="row align-items-start">
       <ul class="list-group" id="submittedtasks"></ul>
     </div>
   </div>
 </div>
 
-{% for snip in onload %}
 
-<div class="list-group mx-2">
-  <div class="row align-items-start">
-    <a href="{{ snip.link }}" class="list-group-item list-group-item-action" aria-current="true">
-      <div class="d-flex w-100 justify-content-between">
-        <h5 class="mb-1">{{ snip.title }}</h5>
-      </div>
-      <p class="mb-1">Published on: <bold>{{ snip.pubDate }}</bold>
-      </p>
-      <small>Description: <bold>{{ snip.description }}</bold></small>
-    </a>
-    {% if user.is_authenticated %}
 
-    <div class="row align-top">
-      <div class="col-4">
-        <button class='snipButton btn btn-primary' name="{{ snip.id }}">Add Snippet</button>
 
-      </div>
-    </div>
-
-    {% else %}
-
-    <div class="row align-top">
-      <div class="col-4">
-        <button class='buttons' name="{{ snip.id }}" data-bs-toggle="tooltip" data-bs-placement="top"
-          title="Sign in to add to your account!" disabled>Add Snippet</button>
-      </div>
-    </div>
-
-    {% endif %}
-
-  </div>
-</div>
-
-<br>
-{% endfor %}
-
-<div class='d-flex justify-content-center'>
-  {% if page_obj.has_previous %}
-  <a class="btn btn-outline-info mb-4" href="?page=1">First</a>
-  <a class="btn btn-outline-info mb-4" href="?page={{ page_obj.previous_page_number }}">Previous</a>
-  {% endif %}
-
-  {% for num in page_obj.paginator.page_range %}
-  {% if page_obj.number == num %}
-  <a class="btn btn-info mb-4" href="?page={{ num }}">{{ num }}</a>
-  {% elif num > page_obj.number|add:'-3' and num < page_obj.number|add:'3' %} <a class="btn btn-outline-info mb-4"
-    href="?page={{ num }}">{{ num }}</a>
-    {% endif %}
-    {% endfor %}
-
-    {% if page_obj.has_next %}
-    <a class="btn btn-outline-info mb-4" href="?page={{ page_obj.next_page_number }}">Next</a>
-    <a class="btn btn-outline-info mb-4" href="?page={{ page_obj.paginator.num_pages }}">Last</a>
-    {% endif %}
-</div>
 
 {% endblock content %}
