--- a/info_project/users/templates/users/profile.html
+++ b/info_project/users/templates/users/profile.html
@@ -1,7 +1,8 @@
 {% extends "base.html" %}
+{% load static %}
 {% load crispy_forms_tags %}
 {% block content %}
-<body onload="popSnips()"></body>
+
 <div class="content-section w-100 p-3">
   <div class="media">
     <img class="rounded-circle account-img" src="{{ user.profile.image.url }}">
@@ -24,10 +25,12 @@
     </div>
   </form>
 </div>
-
-
 <div class="container-fluid ">
-  <h5>Saved Snippets</h5>
+  <h5 class='savedSnips'>Feed Subscriptions</h5>
+  <hr>
+  <div id='feedSubscriptions'></div>
+  <h5 class='savedSnips'>Saved Snippets</h5>
+  <hr>
   <div class="list-group mx-3">
     <div class="row align-items-start">
       <ul class="list-group" id="submittedtasks"></ul>
